@@ -3,6 +3,12 @@
 
                 Version 0.6-trunk
 
+# (r1056)
+ * New criteria for the "limit" command:
+   If invoked with '~!' will restrict to files with unique basename.
+   If with '~=', to files with duplicate basename;
+   if with '~1', to the first of the files with duplicate basename;
+   if with '~$', to the last of the files with duplicate basename. 
 # (r1053)
  * Added variable _all_file_loaders: space-separated list of hardcoded file loaders usable with _file_loader.
 # (r1051,r1052)
